--- a/2041_2060_Condor_Species_Distribution_Modeling.ipynb
+++ b/2041_2060_Condor_Species_Distribution_Modeling.ipynb
@@ -4738,6 +4738,8 @@
       "pygments_lexer": "ipython3",
       "version": "3.12.1"
     },
-    "nbformat": 4,
-    "nbformat_minor": 0
+    "widgets": {
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
