--- a/2041_2060_Condor_Species_Distribution_Modeling.ipynb
+++ b/2041_2060_Condor_Species_Distribution_Modeling.ipynb
@@ -36,7 +36,7 @@
         "ee.Authenticate()\n",
         "\n",
         "# Initialize the library.\n",
-        "ee.Initialize(project='ee-muralisreedhar')"
+        "ee.Initialize(project='ee-rs25-code')"
       ]
     },
     {
