--- a/2041_2060_Condor_Species_Distribution_Modeling.ipynb
+++ b/2041_2060_Condor_Species_Distribution_Modeling.ipynb
@@ -508,9 +508,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: save/read df to csv\n",
+        "# Save/read df to csv\n",
         "\n",
-        "# Assuming 'df' is the DataFrame from the previous code cell\n",
         "df.to_csv('condor_data.csv', index=False)\n",
         "# df = pd.read_csv('condor_data.csv')"
       ],
